<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Escenario1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="lblapellido">Apellido</string>
	<string name="lblnombre">Nombre</string>
	<string name="lblrazonSocial">Razon Social</string>
	<string name="lbldireccion">Direccion</string>
	<string name="lbllocalidad">Localidad</string>
	<string name="lblProvincia">Provincia</string>
	<string name="lblTelefono">Telefono</string>
	<string name="lblFoto">Foto</string>
	<string name="lblid">Id</string>
	<string name="lbltotal">Total</string>
	<string name="lblfecha">Fecha</string>
	<string name="lblCliente">Cliente</string>
	<string name="lblVendedor">Vendedor</string>
	<string name="lblemail">Email</string>
	<string name="lblVenta">Venta</string>
	<string name="lblProducto">Producto</string>
	<string name="lblCantidad">Cantidad</string>
	<string name="lblSubtotal">Subtotal</string>
	<string name="lblPrecioUnitario">Precio Unitario</string>
	<string name="lblCategoria">Categoria</string>
	<string name="lblInflacion">Inflacion</string>
	<string name="lblAceptar">Aceptar</string>
	<string name="lblCancelar">Cancelar</string>
	<string name="lblRegistrar">Registrar</string>
	<string name="lblModificar">Modificar</string>
	<string name="lblEliminar">Eliminar</string>
	<string name="lblclave">Clave</string>
	<string name="lblbuscar">Buscar</string>
	<string name="lblentrar">Entrar</string>
	<string name="lblproductoventa">Detalles ventas</string>
	<string name="lblNuevovendedor">Nuevo Vendedor</string>
	<string name="lblModificarvendedor">Modificar Vendedor</string>
	<string name="lblEliminarvendedor">Eliminar Vendedor</string>
	<string name="lblfiltrar">Filtrar Por</string>
	<string name="lblmenu">menu</string>
	<string name="lblerrorloguin">No Coinciden el Email con la Clave</string>
	<string name="id">Id</string>
	<string name="lblagregar">Nuevo</string>
    <string name="lblSiguiente">Siguiente</string>
    <string name="lblverdetalles">Ver detalles</string>
    <string name="lbladministrador">Administrador</string>
     <string name="btnCliente">Clientes</string>
     
<string name="btnVenta">Ventas</string>
<string name="btnProducto">Productos</string>
<string name="btnDesconectar">Desconectar</string>
<string name="menuUsuario">Menu Usuario</string>
<string name="menuAdministrador">Menu Administrador</string>
<string name="btnVendedor">Vendedores</string>
<string name="lblBienvenido">Bienvenido</string>
<string name="btnCaja">Caja</string>
<string name="lblAdministradorItem">Agregar Item</string>
<string name="lbladministradorAlta">Agregar Administrador</string>
<string name="lblClienteAlta">Agregar Cliente</string>
<string name="lblCategoriaAlta">Agregar Categoria</string>
<string name="lblClienteAl1ta">Agregar Cliente</string>
<string name="lblProductoAlta">Agregar Producto</string>
<string name="lblVendedorAlta">Agregar Vendedor</string>
<string name="lblProductosLista"> Lista de productos</string>
<string name="lblAgregaVentaProducto"> Agregar producto a la venta</string>
<string name="lblactivado">Activado</string>
<string name="lbldesactivado">Desactivado</string>
<string name="lblestado">Estado</string>
</resources>