<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#e7ebb0"
   >
    <ImageView android:id="@+id/ivFotolyvendedoritem" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_launcher"
        android:paddingRight="5dp"/>

    <TextView
        android:id="@+id/lblapellidolyvendedoritem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblapellido" 
        android:layout_toRightOf="@id/ivFotolyvendedoritem"/>

    
    <TextView
        android:id="@+id/lvlnombrelyvendedoritem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblapellidolyvendedoritem"
        android:text="@string/lblnombre" 
          android:layout_toRightOf="@id/ivFotolyvendedoritem"/>

   
    
     <TextView
        android:id="@+id/lvlemaillyvendedoritem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivFotolyvendedoritem"
        android:text="@string/lblemail" />

    
    
     <TextView
        android:id="@+id/lvlclavelyvendedoritem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvlemaillyvendedoritem"
        android:text="@string/lblclave" />
     

</RelativeLayout>
