<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" 
android:background="@drawable/estilo_fondo"
>

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:background="@drawable/estilo_boton"
    >

     <TextView
        android:id="@+id/lblcodproductolytproductoitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/celeste"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"  />
     
       <TextView
        android:id="@+id/lblnombrelytproductoitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblcodproductolytproductoitem"
        android:text="@string/lblnombre"
        android:textColor="@color/celeste"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"  />


    <TextView
        android:id="@+id/lvlcategorialytproductoitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblnombrelytproductoitem"
        android:text="@string/lblCategoria"
        android:textColor="@color/celeste"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"  />

   
    
     <TextView
        android:id="@+id/lvlcantidadlytproductoitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvlcategorialytproductoitem"
        android:text="@string/lblCantidad"
        android:textColor="@color/celeste"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"  />

    
     <TextView
        android:id="@+id/lvlpreciolytproductoitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvlcantidadlytproductoitem"
        android:text="@string/lblPrecioUnitario"
        android:textColor="@color/celeste"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"  />

</RelativeLayout>
</LinearLayout>
